[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/fonts/pixel-font-title.tres" type="DynamicFont" id=1]
[ext_resource path="res://scene/MenuPopupWindow.gd" type="Script" id=2]

[node name="MenuPopupWindow" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 50.0

[node name="MenuDialog" type="WindowDialog" parent="Control/CenterContainer"]
visible = true
margin_left = 280.0
margin_top = 127.0
margin_right = 680.0
margin_bottom = 367.0
rect_min_size = Vector2( 400, 240 )
popup_exclusive = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer/MenuDialog"]
margin_left = 6.0
margin_top = 33.0
margin_right = 396.0
margin_bottom = 172.0
rect_min_size = Vector2( 380, 0 )
custom_constants/separation = 20
__meta__ = {
"_edit_group_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer/MenuDialog/VBoxContainer"]
margin_right = 390.0
margin_bottom = 30.0

[node name="Control" type="Control" parent="Control/CenterContainer/MenuDialog/VBoxContainer/HBoxContainer"]
margin_right = 220.0
margin_bottom = 30.0
rect_min_size = Vector2( 220, 30 )

[node name="Label" type="Label" parent="Control/CenterContainer/MenuDialog/VBoxContainer/HBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "MAP WIDTH:"
align = 2
valign = 1

[node name="TextEdit" type="TextEdit" parent="Control/CenterContainer/MenuDialog/VBoxContainer/HBoxContainer"]
margin_left = 224.0
margin_right = 364.0
margin_bottom = 30.0
rect_min_size = Vector2( 140, 0 )
custom_fonts/font = ExtResource( 1 )
text = "12"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/CenterContainer/MenuDialog/VBoxContainer"]
margin_top = 50.0
margin_right = 390.0
margin_bottom = 80.0

[node name="Control" type="Control" parent="Control/CenterContainer/MenuDialog/VBoxContainer/HBoxContainer2"]
margin_right = 220.0
margin_bottom = 30.0
rect_min_size = Vector2( 220, 30 )

[node name="Label" type="Label" parent="Control/CenterContainer/MenuDialog/VBoxContainer/HBoxContainer2/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "MAP HEIGHT:"
align = 2
valign = 1

[node name="TextEdit" type="TextEdit" parent="Control/CenterContainer/MenuDialog/VBoxContainer/HBoxContainer2"]
margin_left = 224.0
margin_right = 364.0
margin_bottom = 30.0
rect_min_size = Vector2( 140, 0 )
custom_fonts/font = ExtResource( 1 )
text = "12"

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/CenterContainer/MenuDialog/VBoxContainer"]
margin_top = 100.0
margin_right = 390.0
margin_bottom = 130.0

[node name="Control" type="Control" parent="Control/CenterContainer/MenuDialog/VBoxContainer/HBoxContainer3"]
margin_right = 220.0
margin_bottom = 30.0
rect_min_size = Vector2( 220, 30 )

[node name="Label" type="Label" parent="Control/CenterContainer/MenuDialog/VBoxContainer/HBoxContainer3/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "MINE SIZE:"
align = 2
valign = 1

[node name="TextEdit" type="TextEdit" parent="Control/CenterContainer/MenuDialog/VBoxContainer/HBoxContainer3"]
margin_left = 224.0
margin_right = 364.0
margin_bottom = 30.0
rect_min_size = Vector2( 140, 0 )
custom_fonts/font = ExtResource( 1 )
text = "15"

[node name="Restart" type="Button" parent="Control/CenterContainer/MenuDialog"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -45.0
margin_bottom = -5.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 1 )
text = "RESTART"

[connection signal="popup_hide" from="Control/CenterContainer/MenuDialog" to="." method="_on_MenuDialog_popup_hide"]
[connection signal="focus_entered" from="Control/CenterContainer/MenuDialog/VBoxContainer/HBoxContainer/TextEdit" to="." method="_on_MapWidth_focus_entered"]
[connection signal="focus_entered" from="Control/CenterContainer/MenuDialog/VBoxContainer/HBoxContainer2/TextEdit" to="." method="_on_MapHeight_focus_entered"]
[connection signal="focus_entered" from="Control/CenterContainer/MenuDialog/VBoxContainer/HBoxContainer3/TextEdit" to="." method="_on_MineSize_focus_entered"]
[connection signal="button_up" from="Control/CenterContainer/MenuDialog/Restart" to="." method="_on_Restart_button_up"]
